syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service AutoService {
    rpc GetAutos (google.protobuf.Empty) returns (AutoDtoList);
    rpc GetAuto (GetAutoRequest) returns (AutoDto);
    rpc InsertAuto (AutoDto) returns (AutoDto);
    rpc UpdateAuto (AutoDto) returns (google.protobuf.Empty);
    rpc DeleteAuto (AutoDto) returns (google.protobuf.Empty);
}

message GetAutoRequest {
    int32 id_filter = 1;
}

message AutoDtoList {
    repeated AutoDto items = 1;
}

message AutoDto {
    int32 id = 1;
    int32 basistarif = 2;
    int32 tagestarif = 3;
    string marke = 4;
    bytes row_version = 5;
    AutoKlasse auto_klasse = 6;

}

enum AutoKlasse {
    Standard = 0;
    Mittelklasse = 1;
    Luxusklasse = 2;
}
